--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "typescript": "^5.2.2"
   },
   "dependencies": {
+    "@types/express": "^4.17.21",
+    "@types/webtorrent": "^0.109.6",
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "morgan": "^1.10.0",
